# pixelscape

./: .gitmodules  CMakeLists.txt  README.md  notes.txt
assets/: head-mod.mtl  headscan.mtl  medic.mtl  p-body.mtl  susan.mtl  test.mtl
src/: background_grid.cpp  background_grid.h  camera.h  color_buffer.cpp  display.cpp  display.h  light.h  loader_obj.h  logger.cpp  logs.txt  main.cpp  mesh.cpp  mesh.h  model.cpp  model.h  perspective_projection.cpp  perspective_projection.h  software_renderer.h  tiny_color.h  tiny_math.h
src/core/: camera.cpp  camera.h  clipping.cpp  clipping.h  color_buffer.cpp  color_buffer.h  depth_buffer.cpp  depth_buffer.h  display.cpp  display.h  gl.cpp  gl.h  matrix.cpp  matrix.h  mesh.cpp  mesh.h  pipeline.cpp  pipeline.h  ps_array.cpp  ps_array.h  shader.h  tiny_color.h  tiny_math.cpp  tiny_math.h
src/examples/: background_grid.cpp  background_grid.h  draw_rectangles.cpp  draw_rectangles.h  linear_transformations.cpp  linear_transformations.h  mesh_rendering.cpp  mesh_rendering.h  perspective_projection.cpp  perspective_projection.h  projection.cpp  projection.h  render_with_shading.cpp  render_with_shading.h  renderer.cpp  renderer.h  rendering_cube.cpp  rendering_cube.h
src/tooling/: logger.h  render_debug_text.cpp  render_debug_text.h
